Test with multiple settings files

--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,5 @@ basepython = python2.7
 
 [testenv:django19]
 deps = -rmetatags/tests/requirements/19.txt
-commands = python metatags/tests/manage.py test metatags.tests{posargs} --settings=metatags.tests.settings.19
+commands = python metatags/tests/manage.py test metatags.tests{posargs} --settings=metatags.tests.settings.base_19
+           python metatags/tests/manage.py test metatags.tests{posargs} --settings=metatags.tests.settings.19_with_includes
