Test for exclude patterns

--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,4 @@ basepython = python2.7
 deps = -rmetatags/tests/requirements/19.txt
 commands = python metatags/tests/manage.py test metatags.tests{posargs} --settings=metatags.tests.settings.base_19
            python metatags/tests/manage.py test metatags.tests{posargs} --settings=metatags.tests.settings.19_with_includes
+           python metatags/tests/manage.py test metatags.tests{posargs} --settings=metatags.tests.settings.19_with_excludes
